corrections-images-paddings

--- a/src/app/stacks/stacks.scss
+++ b/src/app/stacks/stacks.scss
@@ -10,6 +10,7 @@
         align-items: center;
         font-size: 22px;
         color: #f0b477;
+        margin-bottom: 25px;
     }
 }
 
@@ -66,6 +67,7 @@
         font-size: 20px;
         padding-left: 0px;
         margin-left: 0px;
+        margin-top: 25px;
     }
 }
 
