--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Roboto';
+  src: url('../font/Roboto-Regular.ttf') format('truetype'),
+    url('../font/Roboto-Italic.ttf') format('truetype'),
+    url('../font/Roboto-Bold.ttf') format('truetype'),
+    url('../font/Roboto-BoldItalic.ttf') format('truetype');
+}
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -83,6 +91,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Roboto';
 }
 
 body {
