--- a/src/app/hobby/hobby_mobile.scss
+++ b/src/app/hobby/hobby_mobile.scss
@@ -1,9 +1,17 @@
 @media screen and (max-width: 768px) {
+    .Hobby-body{    
+        ul{
+            padding-left: 0px;
+            list-style-type: none;
+        }
+    
+    }
     .music-pictures{
         display: flex; 
         flex-direction: column;
         flex-wrap: wrap;
-        height: 200px;
+        height: 175px;
+        
         img{
             padding-left: 5px;
             width: 120px;
@@ -11,6 +19,12 @@
             &:hover{
                 opacity: 0.5;
             }
+        }
+
+        iframe{
+            margin-right: 15px;
+            width: 120px;
+            height: 75px; 
         }
     }
 
