hobby-correction-affichage

--- a/src/app/experience/experience_mobile.scss
+++ b/src/app/experience/experience_mobile.scss
@@ -13,6 +13,8 @@
         ul{
             visibility: hidden;
             height: 0px;
+            margin: 0px;
+            padding: 0px;
         }
     }
 
