--- a/src/app/hobby/hobby.scss
+++ b/src/app/hobby/hobby.scss
@@ -9,16 +9,27 @@
         color: #f0b477;
     }
 
+    ul{
+        padding-left: 35px;
+        padding-bottom: 10px;
+    }
+
 }
 
 .music-pictures{
     display: flex; 
+    padding-top: 10px;
     img{
-        padding-left: 40px;
-        width: 200px;
-        height: 150px;
+        width: 300px;
+        height: 200px;
         &:hover{
             opacity: 0.5;
         }
+    }
+
+    iframe{
+        margin-right: 45px;
+        width: 300px;
+        height: 200px; 
     }
 }
