--- a/src/app/stacks/stacks.scss
+++ b/src/app/stacks/stacks.scss
@@ -3,6 +3,7 @@
     justify-content: space-around;
     width: 100%;
     height: 500px;
+    padding-bottom: 30px;
 
     h3 {
         display: flex;
