paragraphes whites all thm

--- a/src/app/hobby/hobby.scss
+++ b/src/app/hobby/hobby.scss
@@ -12,6 +12,11 @@
     ul{
         padding-left: 35px;
         padding-bottom: 10px;
+        color: #FFFEFD;
+    }
+
+    p{
+        color: #FFFEFD;
     }
 
 }
